# svc

./: CMakeLists.txt  README.md
cmake/: catch2_test_register.cmake  example_register.cmake
examples/: sdl_view.cpp
include/: asserts.hpp  logs.hpp
include/gl/: misc.hpp
include/svc/: AbstractItem.hpp  AbstractView.hpp  SDLController.hpp  SDLView.hpp  Scene.hpp  base_geometry_types.hpp  serialization.hpp
src/gl/: misc.cpp
src/svc/: AbstractItem.cpp  AbstractView.cpp  Rect.cpp  SDLController.cpp  SDLView.cpp  Scene.cpp
tests/: test_Item.cpp  test_Rect.cpp  test_Scene.cpp  test_View.cpp  test_auxilary.hpp  test_scene.cpp  test_serialization.cpp
